# aws-robomaker-jetbot-ros

./: .env  Dockerfile.l4t.ros.foxy  Dockerfile.robot  Dockerfile.simulation  README.md  app_entrypoint.sh  build.sh  deps.repos  docker-compose.yml  nvidia-l4t-apt-source.list  robot.compose.yml  simulation.compose.yml  simulation_mac.compose.yml
aws_example_apps/aws_example_apps/: package.xml
docker/: Dockerfile
gazebo_dance_world/: CMakeLists.txt  package.xml
gazebo_dance_world/launch/: dance.launch.py
gazebo_dance_world/models/DanceFloor/: model.sdf
gazebo_dance_world/worlds/: dance.world
jetbot_aws_setup/: configure_robot.sh
jetbot_aws_setup/scripts/: bot_install.sh
jetbot_base/: CMakeLists.txt  package.xml  setup.cfg  setup.py
jetbot_base/jetbot_base/: jetbot_camera.py  jetbot_motor_controller.py
jetbot_dashboard/: package.json
jetbot_description/launch/: spawn.launch.py
jetbot_description/urdf/: jetbot.urdf
jetbot_description/worlds/: empty.world
jetbot_gazebo/: CMakeLists.txt  package.xml  setup.py
jetbot_gazebo/launch/: gazebo_circle.launch  gazebo_dance.launch  gazebo_teleop.launch
jetbot_gazebo/nodes/: cmd_converter.py
jetbot_inference/: CMakeLists.txt
jetbot_inference/launch/: dino.launch
jetbot_inference/scripts/: run_dino.sh
jetbot_move/: CMakeLists.txt  package.xml  setup.cfg  setup.py
jetbot_move/.ipynb_checkpoints/: package-checkpoint.xml
jetbot_move/launch/: circle.launch  teleop.launch
jetbot_move/nodes/: dance
jetbot_move/routines/: autumn_twist.json
jetbot_navigation/: CMakeLists.txt
jetbot_slam/: CMakeLists.txt
robot_ws/: deps.repos
simulation_ws/src/jetbot_description/: CMakeLists.txt  package.xml
(+85 files in other folders)
