<?xml version="1.0"?>
<package format="2">
  <name>jetbot_move</name>
  <version>1.0.0</version>
  <description>
    A custom AWS RoboMaker robot package with a JetBot
  </description>
  <license>MIT</license>
  <author email="aws-robomaker@amazon.com">AWS RoboMaker</author>
  <maintainer email="aws-robomaker@amazon.com">AWS RoboMaker</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
</package>